--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 # Distribution / packaging
 build/
 *.egg-info/
+notebooks/
 
 # pytest
 .pytest_cache/
@@ -30,7 +31,7 @@ dist/
 *.models
 *.pt
 /wandb
-*.xyz
+
 /checkpoints
 *.model
 
