--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,9 @@ install_requires =
     # for plotting:
     matplotlib
     pandas
+    wandb
+    botorch
+    ax-platform
 
 [options.entry_points]
 console_scripts =
